# matsemanns-streetview-tools

./: .env  .gitignore  Dockerfile  README.md  cli.py  pyproject.toml
matsemanns_streetview_tools/: google_street_view.py  image.py  metadata.py  tracer.py  util.py  video.py
matsemanns_streetview_tools/gpx/: __init__.py  _math.py  from_images.py  modify.py  parse.py  types.py
matsemanns_streetview_tools/gpx/tests/: test_math.py  test_modify.py  test_parse.py  test_utils.py
matsemanns_streetview_tools/scripts/: __init__.py  google.py  image.py  pipeline.py  video_from_folder.py
matsemanns_streetview_tools/tests/: test_metadata.py  test_video.py
